add content to the results.cshtml page

--- a/Views/results.cshtml
+++ b/Views/results.cshtml
@@ -1,9 +1,10 @@
-<h1>Repeat Counter</h1>
+<h1>Results</h1>
 
-<form action="/results" method="post">
-  <label for="sentence">Enter a sentence: </label>
-  <input id="sentence" name="sentence" type="text">
-  <label for="word">Enter a word to search for: </label>
-  <input id="word" name="word" type="text">
-  <button type="submit">
-</form>
+@if (@Model == 0)
+{
+  <h3>Error: That word was not found in the sentence</h3>
+}
+@else
+{
+  <h3>That word showed up @Model times</h3>
+}
