creat a working nancy site wih the Repeat Counter object

--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -5,5 +5,5 @@
   <input id="sentence" name="sentence" type="text">
   <label for="word">Enter a word to search for: </label>
   <input id="word" name="word" type="text">
-  <button type="submit">
+  <button type="submit">Enter</button>
 </form>
