add styling: banner image, font color, size, and position changes

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>Repeat Counter</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link href="https://fonts.googleapis.com/css?family=Crafty+Girls|Homemade+Apple" rel="stylesheet">
     <link rel="stylesheet" href="/Content/css/styles.css">
   </head>
   <body>
     <div class="banner">
+      <h1 class="header">Repeat Counter</h1>
     </div>
     <div class="container">
     @RenderBody()
