--- a/Content/css/styles.css
+++ b/Content/css/styles.css
@@ -5,7 +5,7 @@
   color: red;
   padding-top: 80px;
   font-weight: bold;
-  padding-right: 50px;
+  padding-right: 150px;
 }
 
 .banner {
@@ -48,4 +48,8 @@ p {
 
 label {
   font-size: 24px;
+}
+
+.results {
+  font-weight: bold;
 }
