change button from 'enter' to 'search'.

--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -7,5 +7,5 @@
   <input id="sentence" name="sentence" type="text" class="form-control" required>
   <label for="word">Enter a word to search for: </label>
   <input id="word" name="word" type="text" class="form-control" required>
-  <button type="submit" class="btn btn-danger" >Enter</button>
+  <button type="submit" class="btn btn-danger" >Search</button>
 </form>
